fix: remove overflow-x for editor in print

--- a/frappe/public/scss/desk/quill.scss
+++ b/frappe/public/scss/desk/quill.scss
@@ -68,7 +68,7 @@
 		height: auto;
 		min-height: 0;
 		max-height: none;
-		overflow-y: hidden;
+		overflow: hidden;
 	}
 }
 
